--- a/mywatchlist/templates/mywatchlist.html
+++ b/mywatchlist/templates/mywatchlist.html
@@ -10,12 +10,14 @@
   <h5>Student ID: </h5>
   <b>{{npm}}</b>
 
+  <p>{{result}}</p>
+
   <table border="2", bordercolor="blue">
     <tr>
       <th>Watched</th>
       <th>Title</th>
-      <th>Release Date</th>
       <th>Rating</th>
+      <th>Release Date</th>
       <th>Review</th>
     </tr>
     {% comment %} Add the data below this line {% endcomment %}
@@ -23,8 +25,8 @@
         <tr>
             <th>{{barang.watched}}</th>
             <th>{{barang.title}}</th>
-            <th>{{barang.release_date}}</th>
             <th>{{barang.rating}}</th>
+            <th>{{barang.release_date}}</th>
             <th>{{barang.review}}</th>
         </tr>
     {% endfor %}
