--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -1,34 +1,73 @@
 {% extends 'base.html' %}
 
 {% block meta %}
-<title>Registrasi Akun</title>
+<title>Register</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+<style>
+    head, body {
+        margin: 0;
+        padding: 0;
+        min-height: 100vh;
+    }
+
+    body {
+      display: flex;
+      align-items: center;
+      padding-top: 40px;
+      padding-bottom: 40px;
+      background: linear-gradient(#094f94cd, rgba(158, 18, 201, 0.4));     
+    }
+    
+    .form-register {
+      max-width: 400px;
+      padding: 25px;
+    }
+
+    .form-register .form-floating:focus-within {
+      z-index: 1;
+    }
+
+    .form-register input[type="text"] {
+      margin-bottom: 5px;
+    }
+
+    .form-register input[name="password1"] {
+      margin-bottom: 5px;
+    }
+
+    .form-register input[name="password2"] {
+      margin-bottom: 5px;     
+    }
+</style>
 {% endblock meta %}
 
-{% block content %}  
+{% block content %}
+<main class="form-register w-100 m-auto text-center">
+    <form method="POST" action="">
+        {% csrf_token %}  
 
-<div class = "login">
-    
-    <h1>Formulir Registrasi</h1>  
+        <h1 class="h1 mb-3 fw-semibold text-center">REGISTER</h1>
+        
+        <div class="form-floating">
+            <input type="text" class="form-control" name="username" autocapitalize="none" autocomplete="username" autofocus placeholder="Enter username" required>
+            <label for="username">Username</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" class="form-control" name="password1" id="password" autocomplete="new-password" placeholder="Password" required>
+            <label for="password">Password</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" class="form-control" name="password2" id="password" autocomplete="new-password" placeholder="Confirm Password" required>
+            <label for="password">Confirm Password</label>
+        </div>        
+        <input class="w-100 mt-2 btn btn-lg btn-primary" type="submit" value="Daftar"></input>
 
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
-
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}
-
-</div>  
-
-{% endblock content %}
+        {% if messages %}
+            {% for message in messages %}
+                <p class="text-muted">{{ message }}</p>
+            {% endfor %}
+        {% endif %}        
+        <p class="mt-3 mb-3">Sudah mempunyai akun? <a href="{% url 'todolist:login' %}">Login</a></p>        
+    </form>  
+</main>
+{% endblock content %} 
