--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -1,33 +1,93 @@
 {% extends 'base.html' %}
+
+{% block meta %}
+<title>To Do List</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+<style>
+  head, body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    /* height: auto;
+    width: auto; */
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+body {
+    align-items: center;
+    background: linear-gradient(#094f94cd, rgba(158, 18, 201, 0.4)); 
+  }
+
+  .content {
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+  }
+
+  .hapus {
+    display:block;
+    float:center;
+    text-align:center;
+    position: absolute;
+    top: 10px;
+    right: 10px;    
+  }
+
+  .subtitleYes {
+    color: green;
+  }
+
+  .subtitleNo {
+    color: red;
+  }
+
+  .card-subtitle {
+    text-align: center;
+  }
+
+  button {
+    height: auto;
+  }
+ </style>
+{% endblock meta %}
+
 {% block content %}
-<h3>Welcome {{user}}!</h3>
-<br>
-<button><a href="{% url 'todolist:create-task' %}">Tambah Task Baru</a></button>
-<button><a href="{% url 'todolist:logout' %}">Logout</a></button>
-<br>
-<br>
-<table border="1">
-    <tr>
-    <th>Tanggal</th>
-    <th>Judul</th>
-    <th>Deskripsi</th>
-    <th>Status</th>
-    <th colspan="2">Detail</th>
-    </tr>
-    {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
-    {% for todo in list_barang %}
-        <tr>
-            <th>{{todo.date}}</th>
-            <th>{{todo.title}}</th>
-            <th>{{todo.description}}</th>
-            {% if todo.is_finished %}
-            <th>Selesai</th>
-            {% else %}
-            <th>Belum Selesai</th>
-            {% endif %}
-            <th><button><a href="{% url 'todolist:status' todo.id %}">Ubah Status</a></button></th>
-            <th><button><a href="{% url 'todolist:hapus' todo.id %}">Hapus Task</a></button></th>
-        </tr>
-    {% endfor %}
-</table>
+<main class="todolist m-auto w-auto">
+<div class="content w-100">
+    <div class="header text-center">
+        <h2 class="fw-semibold m-5">Welcome, {{user.get_username}}!</h2>
+    </div>
+    
+    <div class="container">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            {% for task in list_barang %}
+            <div class="col">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title fw-semibold">{{task.title}}</h5>
+                        <h6 class="card-subtitle m-2 text-muted">Dibuat pada {{task.date}}</h6>
+                        {% if task.is_finished %}
+                        <h6 class="subtitleYes">Selesai</h6>
+                        {% else %}
+                        <h6 class="subtitleNo">Belum Selesai</h6>
+                        {% endif %}
+                        <p class="card-text">{{task.description}}</p>
+                    </div>
+                    <div class="card-footer">
+                        <button type="button" class="btn btn-dark btn-sm m-2" style="float:center; background-color:rgb(46, 123, 46)"><a class="text-light" href="{% url 'todolist:status' task.id %}" style="text-decoration:solid">Ubah Status</a></button>
+                        <button type="button" class="btn btn-primary btn-sm m-2" style="float:center; background-color:crimson"><a class="text-light" href="{% url 'todolist:hapus' task.id %}" style="text-decoration:solid">Hapus</a></button>
+                        <!-- <button type="button" class="btn btn-primary btn-sm m-2 color:red;" style="float:center"><a class="text-light" href="{% url 'todolist:hapus' task.id %}" style="text-decoration:solid">Hapus</a></button> -->
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+      </div>
+    </div>
+
+    <div class="button text-center">
+        <button type="button" class="btn btn-primary btn-lg mt-5 mb-5 fw-bold m-auto" onclick="location.href='/todolist/create-task'">Tambah Task</button> 
+        <button class="btn btn-primary btn-lg mt-5 mb-5 fw-bold m-auto" type="button" onclick="location.href='/todolist/logout'">Logout</button>
+    </div>
+</div>
+</main>
 {% endblock content %}
