--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -57,7 +57,7 @@
                 <p class="text-muted">{{ message }}</p>
             {% endfor %}
         {% endif %}        
-        <p class="m-3 p-2">Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Create Account</a></p>        
+        <p class="m-3 p-3">Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Buat Akun</a></p>        
     </form>  
 </main>
 {% endblock content %}
