--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -67,7 +67,7 @@
                 <p class="text-muted">{{ message }}</p>
             {% endfor %}
         {% endif %}        
-        <p class="mt-3 mb-3">Sudah mempunyai akun? <a href="{% url 'todolist:login' %}">Login</a></p>        
+        <p class="mt-3 mb-3">Sudah mempunyai akun? <a href="{% url 'todolist:login' %}">Masuk</a></p>        
     </form>  
 </main>
 {% endblock content %} 
