--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -49,15 +49,15 @@
         <h1 class="h1 mb-3 fw-semibold text-center">REGISTER</h1>
         
         <div class="form-floating">
-            <input type="text" class="form-control" name="username" autocapitalize="none" autocomplete="username" autofocus placeholder="Enter username" required>
+            <input type="text" class="form-control" name="username" autofocus placeholder="Enter username" required>
             <label for="username">Username</label>
         </div>
         <div class="form-floating">
-            <input type="password" class="form-control" name="password1" id="password" autocomplete="new-password" placeholder="Password" required>
+            <input type="password" class="form-control" name="password1" id="password" placeholder="Password" required>
             <label for="password">Password</label>
         </div>
         <div class="form-floating">
-            <input type="password" class="form-control" name="password2" id="password" autocomplete="new-password" placeholder="Confirm Password" required>
+            <input type="password" class="form-control" name="password2" id="password" placeholder="Confirm Password" required>
             <label for="password">Confirm Password</label>
         </div>        
         <input class="w-100 mt-2 btn btn-lg btn-primary" type="submit" value="Daftar"></input>
