--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -65,7 +65,7 @@ body {
         <div class="row row-cols-1 row-cols-md-3 g-4">
             {% for task in list_barang %}
             <div class="col">
-                <div class="card h-g100">
+                <div class="card h-100">
                     <div class="card-body">
                         <h5 class="card-title fw-semibold">{{task.title}}</h5>
                         <h6 class="card-subtitle m-2 text-muted">Dibuat pada {{task.date}}</h6>
