--- a/todolist/templates/create-task.html
+++ b/todolist/templates/create-task.html
@@ -23,7 +23,7 @@
 <main class="create-task w-100 m-auto text-center">
     <nav class="navbar mb-0">
         <div class="container-fluid">
-            <button class="btn mb-4 text-center" type="button" onclick="location.href='/todolist/'" style="font-size:50px">⬅</button>
+            <button class="btn mb-4 text-center" type="button" onclick="location.href='/todolist/'" style="font-size:50px">&#8592;</button>
         </div>
     </nav>
     <div class="content container-fluid" style="min-width:50px; max-width: 800px">
