--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -62,7 +62,7 @@ body {
     </div>
     
     <div class="container">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
             {% for task in list_barang %}
             <div class="col">
                 <div class="card h-100">
