--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -49,7 +49,7 @@
         <h1 class="h1 mb-3 fw-semibold text-center">REGISTER</h1>
         
         <div class="form-floating">
-            <input type="text" class="form-control" name="username" autofocus placeholder="Enter username" required>
+            <input type="text" class="form-control" name="username" placeholder="Enter username" required>
             <label for="username">Username</label>
         </div>
         <div class="form-floating">
